packages/react-components/src/components/modal/content/modal-content.module.css
@import '../../../core/utils/media.css';

@layer components {
  .Content {
    background-color: var(--global-background);
    overscroll-behavior: contain;
    overflow: auto;
    padding:
      token(--space-24)
      token(--space-24)
      token(--space-24)
      token(--space-24);
    -webkit-overflow-scrolling: touch;

    &[data-center-vertically='true'] {
      margin: auto;
    }

    @media (--from-small) {
      min-height: auto;
      margin: 0;
    }
  }
}

